added camera classes

--- a/GUI/mainwindow.ui
+++ b/GUI/mainwindow.ui
@@ -85,6 +85,16 @@
       <height>381</height>
      </rect>
     </property>
+    <widget class="QGraphicsView" name="graphicsView">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>60</y>
+       <width>256</width>
+       <height>192</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
