--- a/GUI/mainwindow.ui
+++ b/GUI/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>770</width>
-    <height>563</height>
+    <width>1055</width>
+    <height>559</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>450</y>
+      <x>480</x>
+      <y>260</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -27,24 +27,11 @@
      <string>Snap2Text</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
-    <property name="geometry">
-     <rect>
-      <x>630</x>
-      <y>480</y>
-      <width>121</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Take Picture</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>450</y>
+      <x>360</x>
+      <y>200</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -56,8 +43,8 @@
    <widget class="QPlainTextEdit" name="plainTextEdit">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>40</y>
+      <x>610</x>
+      <y>50</y>
       <width>351</width>
       <height>381</height>
      </rect>
@@ -78,7 +65,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="page">
      <widget class="QLabel" name="label">
@@ -105,6 +92,12 @@
         <height>371</height>
        </rect>
       </property>
+      <property name="maximumSize">
+       <size>
+        <width>271</width>
+        <height>16777215</height>
+       </size>
+      </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
@@ -116,6 +109,12 @@
          <width>269</width>
          <height>369</height>
         </rect>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>369</height>
+        </size>
        </property>
       </widget>
      </widget>
