--- a/GUI/mainwindow.ui
+++ b/GUI/mainwindow.ui
@@ -7,34 +7,51 @@
     <x>0</x>
     <y>0</y>
     <width>1055</width>
-    <height>559</height>
+    <height>545</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">plainTextEdit{background-color : white}
+QWidget{background-color: black}
+QPushButton { color: black; background-color: linen }
+</string>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>260</y>
+      <x>160</x>
+      <y>450</y>
       <width>121</width>
       <height>41</height>
      </rect>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QWidget{background-color: random}
+QPushButton { color: black; background-color: linen }
+QPushButton_4 {color:black; background-color: linen}</string>
+    </property>
     <property name="text">
-     <string>Snap2Text</string>
+     <string>Snap2Txt</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>200</y>
+      <x>650</x>
+      <y>450</y>
       <width>121</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
      <string>Save .txt</string>
@@ -43,25 +60,35 @@
    <widget class="QPlainTextEdit" name="plainTextEdit">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>50</y>
-      <width>351</width>
-      <height>381</height>
+      <x>420</x>
+      <y>60</y>
+      <width>541</width>
+      <height>371</height>
      </rect>
     </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="plainText">
-     <string>Text Will Appear Here:
+     <string>Welcome to Snap2Txt!
+Your Text Will Appear Here:
 
 </string>
+    </property>
+    <property name="backgroundVisible">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>30</y>
-      <width>291</width>
-      <height>391</height>
+      <x>80</x>
+      <y>40</y>
+      <width>321</width>
+      <height>401</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -86,8 +113,8 @@
      <widget class="QScrollArea" name="scrollArea">
       <property name="geometry">
        <rect>
-        <x>19</x>
-        <y>19</y>
+        <x>0</x>
+        <y>20</y>
         <width>271</width>
         <height>371</height>
        </rect>
@@ -97,6 +124,9 @@
         <width>271</width>
         <height>16777215</height>
        </size>
+      </property>
+      <property name="cursor" stdset="0">
+       <cursorShape>CrossCursor</cursorShape>
       </property>
       <property name="widgetResizable">
        <bool>true</bool>
@@ -116,9 +146,61 @@
          <height>369</height>
         </size>
        </property>
+       <widget class="QLabel" name="label_3">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>150</y>
+          <width>241</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>If you can read this, your camera is not enabled</string>
+        </property>
+       </widget>
       </widget>
      </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Camera:</string>
+      </property>
+     </widget>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>470</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Clear</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>440</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Reset</string>
+    </property>
    </widget>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
