--- a/GUI/mainwindow.ui
+++ b/GUI/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1055</width>
-    <height>545</height>
+    <width>1049</width>
+    <height>568</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -180,26 +180,16 @@ Your Text Will Appear Here:
     <property name="geometry">
      <rect>
       <x>880</x>
-      <y>470</y>
+      <y>450</y>
       <width>75</width>
       <height>23</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
      <string>Clear</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_3">
-    <property name="geometry">
-     <rect>
-      <x>880</x>
-      <y>440</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Reset</string>
     </property>
    </widget>
   </widget>
