--- a/GUI/mainwindow.ui
+++ b/GUI/mainwindow.ui
@@ -7,8 +7,16 @@
     <x>0</x>
     <y>0</y>
     <width>1049</width>
-    <height>568</height>
+    <height>680</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <pointsize>24</pointsize>
+   </font>
+  </property>
+  <property name="cursor">
+   <cursorShape>ArrowCursor</cursorShape>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -24,10 +32,18 @@ QPushButton { color: black; background-color: linen }
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>450</y>
+      <y>520</y>
       <width>121</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Consolas</family>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
@@ -45,10 +61,18 @@ QPushButton_4 {color:black; background-color: linen}</string>
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>450</y>
+      <y>520</y>
       <width>121</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Consolas</family>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
@@ -61,8 +85,8 @@ QPushButton_4 {color:black; background-color: linen}</string>
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>60</y>
-      <width>541</width>
+      <y>130</y>
+      <width>551</width>
       <height>371</height>
      </rect>
     </property>
@@ -86,7 +110,7 @@ Your Text Will Appear Here:
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>40</y>
+      <y>110</y>
       <width>321</width>
       <height>401</height>
      </rect>
@@ -113,7 +137,7 @@ Your Text Will Appear Here:
      <widget class="QScrollArea" name="scrollArea">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>20</x>
         <y>20</y>
         <width>271</width>
         <height>371</height>
@@ -149,11 +173,17 @@ Your Text Will Appear Here:
        <widget class="QLabel" name="label_3">
         <property name="geometry">
          <rect>
-          <x>20</x>
-          <y>150</y>
+          <x>10</x>
+          <y>130</y>
           <width>241</width>
           <height>31</height>
          </rect>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QLabel{color:white}</string>
         </property>
         <property name="text">
          <string>If you can read this, your camera is not enabled</string>
@@ -164,11 +194,14 @@ Your Text Will Appear Here:
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>20</x>
         <y>0</y>
         <width>47</width>
         <height>13</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLabel{color : white}</string>
       </property>
       <property name="text">
        <string>Camera:</string>
@@ -179,11 +212,16 @@ Your Text Will Appear Here:
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>880</x>
-      <y>450</y>
-      <width>75</width>
-      <height>23</height>
+      <x>930</x>
+      <y>510</y>
+      <width>41</width>
+      <height>21</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Consolas</family>
+     </font>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
@@ -192,13 +230,62 @@ Your Text Will Appear Here:
      <string>Clear</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>110</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Consolas</family>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{color : white}</string>
+    </property>
+    <property name="text">
+     <string>Text:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>10</y>
+      <width>201</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Consolas</family>
+      <pointsize>26</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{color : white}</string>
+    </property>
+    <property name="text">
+     <string>Snap2Txt</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>false</bool>
+    <bool>true</bool>
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
